force-app/main/default/objects/SealApplication__c/SealApplication__c.object-meta.xml
<CustomObject>
    <label>捺印申請</label>
    <nameField>
        <displayFormat>SA-{000000000}</displayFormat>
        <label>捺印申請名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>