force-app/main/default/objects/SealApplication__c/fields/AfterApplicationCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>AfterApplicationCorrespondence__c</fullName>
    <label>申請受理後の対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>捺印＋送付</fullName>
            </value>
            <value>
                <fullName>捺印のみ</fullName>
            </value>
            <value>
                <fullName>送付のみ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>