force-app/main/default/objects/SealApplication__c/fields/AIUInsuranceB__c.field-meta.xml
<CustomField>
    <fullName>AIUInsuranceB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AIU保険B</label>
    <type>Checkbox</type>
</CustomField>