force-app/main/default/objects/SealApplication__c/fields/ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDate__c</fullName>
    <label>申請依頼日</label>
    <type>Date</type>
</CustomField>