force-app/main/default/objects/SealApplication__c/fields/CompanyInsuranceCardCopy__c.field-meta.xml
<CustomField>
    <fullName>CompanyInsuranceCardCopy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>企業保険証写し</label>
    <type>Checkbox</type>
</CustomField>