force-app/main/default/objects/SealApplication__c/fields/CompanySummaryCopy__c.field-meta.xml
<CustomField>
    <fullName>CompanySummaryCopy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>会社概要コピー</label>
    <type>Checkbox</type>
</CustomField>