force-app/main/default/objects/SealApplication__c/fields/CompanySummaryOriginal__c.field-meta.xml
<CustomField>
    <fullName>CompanySummaryOriginal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>会社概要原本</label>
    <type>Checkbox</type>
</CustomField>