force-app/main/default/objects/SealApplication__c/fields/delAfterSignCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>delAfterSignCorrespondence__c</fullName>
    <label>（不要）捺印後の対応</label>
    <type>TextArea</type>
</CustomField>