force-app/main/default/objects/SealApplication__c/fields/delIsSending__c.field-meta.xml
<CustomField>
    <fullName>delIsSending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>（不要）送付有</label>
    <type>Checkbox</type>
</CustomField>