force-app/main/default/objects/SealApplication__c/fields/DeliveryContact__c.field-meta.xml
<CustomField>
    <fullName>DeliveryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送付先（取引先担当者）</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>捺印申請</relationshipLabel>
    <relationshipName>B4Fn</relationshipName>
    <type>Lookup</type>
</CustomField>