force-app/main/default/objects/SealApplication__c/fields/DeliveryLandload__c.field-meta.xml
<CustomField>
    <fullName>DeliveryLandload__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送付先（家主）</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>捺印申請</relationshipLabel>
    <relationshipName>MVyO</relationshipName>
    <type>Lookup</type>
</CustomField>