force-app/main/default/objects/SealApplication__c/fields/EnclosedDocument2__c.field-meta.xml
<CustomField>
    <fullName>EnclosedDocument2__c</fullName>
    <label>同封書類②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>