force-app/main/default/objects/SealApplication__c/fields/EnclosedDocument3__c.field-meta.xml
<CustomField>
    <fullName>EnclosedDocument3__c</fullName>
    <label>同封書類③</label>
    <length>255</length>
    <type>Text</type>
</CustomField>