force-app/main/default/objects/SealApplication__c/fields/EnclosedDocument5__c.field-meta.xml
<CustomField>
    <fullName>EnclosedDocument5__c</fullName>
    <label>同封書類⑤</label>
    <length>255</length>
    <type>Text</type>
</CustomField>