force-app/main/default/objects/SealApplication__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>満了日</label>
    <type>Date</type>
</CustomField>