force-app/main/default/objects/SealApplication__c/fields/Including__c.field-meta.xml
<CustomField>
    <fullName>Including__c</fullName>
    <defaultValue>false</defaultValue>
    <label>包括</label>
    <type>Checkbox</type>
</CustomField>