force-app/main/default/objects/SealApplication__c/fields/IsNotAutoReminder__c.field-meta.xml
<CustomField>
    <fullName>IsNotAutoReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動督促不可</label>
    <type>Checkbox</type>
</CustomField>