force-app/main/default/objects/SealApplication__c/fields/OperationConsignmentCertificateOriginal__c.field-meta.xml
<CustomField>
    <fullName>OperationConsignmentCertificateOriginal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>業務委託証明書原本</label>
    <type>Checkbox</type>
</CustomField>