force-app/main/default/objects/SealApplication__c/fields/ReturnNum3__c.field-meta.xml
<CustomField>
    <fullName>ReturnNum3__c</fullName>
    <label>返送数③</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>