force-app/main/default/objects/SealApplication__c/fields/ReturnNum7__c.field-meta.xml
<CustomField>
    <fullName>ReturnNum7__c</fullName>
    <label>返送数⑦</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>