force-app/main/default/objects/SealApplication__c/fields/SendMethod__c.field-meta.xml
<CustomField>
    <fullName>SendMethod__c</fullName>
    <label>送付方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>レターパック青</fullName>
            </value>
            <value>
                <fullName>レターパック赤</fullName>
            </value>
            <value>
                <fullName>普通</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>