force-app/main/default/objects/SealApplication__c/fields/SignApplicant__c.field-meta.xml
<CustomField>
    <fullName>SignApplicant__c</fullName>
    <label>捺印申請者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>