force-app/main/default/objects/SealApplication__c/fields/SignApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>SignApplicationDate__c</fullName>
    <label>捺印申請日</label>
    <type>Date</type>
</CustomField>