force-app/main/default/objects/SealApplication__c/fields/SignDocumentName1__c.field-meta.xml
<CustomField>
    <fullName>SignDocumentName1__c</fullName>
    <label>捺印書類名①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>