force-app/main/default/objects/SealApplication__c/fields/SignDocumentName6__c.field-meta.xml
<CustomField>
    <fullName>SignDocumentName6__c</fullName>
    <label>捺印書類名⑥</label>
    <length>255</length>
    <type>Text</type>
</CustomField>