force-app/main/default/objects/SealApplication__c/fields/SignDocumentName8__c.field-meta.xml
<CustomField>
    <fullName>SignDocumentName8__c</fullName>
    <label>捺印書類名⑧</label>
    <length>255</length>
    <type>Text</type>
</CustomField>