force-app/main/default/objects/SealApplication__c/fields/SignDocumentNumOfCopies1__c.field-meta.xml
<CustomField>
    <fullName>SignDocumentNumOfCopies1__c</fullName>
    <label>捺印書類部数①</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>