force-app/main/default/objects/SealApplication__c/fields/SignDocumentNumOfCopies5__c.field-meta.xml
<CustomField>
    <fullName>SignDocumentNumOfCopies5__c</fullName>
    <label>捺印書類部数⑤</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>