force-app/main/default/objects/SealApplication__c/fields/SignDocumentNumOfCopies6__c.field-meta.xml
<CustomField>
    <fullName>SignDocumentNumOfCopies6__c</fullName>
    <label>捺印書類部数⑥</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>