force-app/main/default/objects/SealApplication__c/fields/ToPostInstruction__c.field-meta.xml
<CustomField>
    <fullName>ToPostInstruction__c</fullName>
    <label>ポストへの指示</label>
    <type>TextArea</type>
</CustomField>