force-app/main/default/objects/SealApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SecondaryCheckDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Seal__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>