force-app/main/default/objects/SealApplication__c/listViews/ChangeSealApplication_SealApplication.listView-meta.xml
<ListView>
    <fullName>ChangeSealApplication_SealApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>入替捺印申請チーム</label>
    <queue>ChangeSealApplication</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>