force-app/main/default/objects/SealApplication__c/listViews/ConditionChangeSealApplication_SealApplication.listView-meta.xml
<ListView>
    <fullName>ConditionChangeSealApplication_SealApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>条件変更捺印申請チーム</label>
    <queue>ConditionChangeSealApplication</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>