force-app/main/default/objects/SealApplication__c/listViews/NewMatterSealApplication_SealApplication.listView-meta.xml
<ListView>
    <fullName>NewMatterSealApplication_SealApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>新規捺印申請チーム</label>
    <queue>NewMatterSealApplication</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>