force-app/main/default/objects/SealApplication__c/listViews/RenewalSealApplication_SealApplication.listView-meta.xml
<ListView>
    <fullName>RenewalSealApplication_SealApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>更新捺印申請チーム</label>
    <queue>RenewalSealApplication</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>